src/css/os.css
html,
body {
    background: #000;
    overflow: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol {
    margin-block-start: 0;
    margin-block-end: 0;
}

.lockedItem {
    color: #900;
}

.freshItem {
    color: #09a;
}

.listItem {
    color: var(--primary-color);
}

#autoComplete {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 10;
    vertical-align: bottom;
    text-align: left;
    color: #444;
}

#programTheme {
    --primary-color: #fff;
    --secondary-color: #ff0;
}

#terminalTheme {
    --primary-color: #fff;
    --secondary-color: #aaa;
}

#cliTheme {
    --primary-color: #0f0;
    --secondary-color: #0a0;
}

img {
    max-width: 100%;
    max-height: 220px;
    height: auto;
    width: auto;
}

.commandBlock {
    margin-block-end: 1em;
    animation: fadeIn .2s;
}

.directoryList ul {
    list-style-type: none;
    padding: 0;
    padding-inline-start: 0px;
}

.directoryList li {
    align-items: center;
    display: flex;
    margin-left: 0;
}

.directoryList span {
    width: 1em;
    margin-right: 10px;
    display: inline-block;
    text-align: center;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    10% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.head {
    font-weight: bolder;
}

.tip {
    color: var(--secondary-color);
    font-size: 14px;
    margin-left: 40px;
}

.subHead {
    color: var(--secondary-color);
}

.small {
    font-size: 14px;
}

.text {
    margin-left: 40px;
}

.subtext {
    color: var(--secondary-color);
    margin-left: 40px;
}

.response {
    color: var(--primary-color);
}

.textFile p {
    margin-block-start: 0;
    margin-block-end: 0;
}

.program {
    height: 360px;
    width: 640px;
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    border: 1px solid;
    color: var(--secondary-color);
    border-color: var(--secondary-color);
}

html,
body,
.program,
.program input,
.program #output {
    font-family: "Share Tech Mono", monospace;
    font-size: 18px;
}

.material-symbols-sharp {
    vertical-align: bottom;
    font-variation-settings:
        'FILL' 0,
        'wght' 200,
        'GRAD' 0,
        'opsz' 24
}

.cli {
    width: 100%;
    height: 100%;
    display: inline-flex;
    flex-flow: column;
    flex-direction: column;
    align-items: flex-end;
    position: absolute;
    padding: 10px;
    box-sizing: border-box;
}

#output {
    flex: 1;
    width: 100%;
    flex-flow: column;
    overflow-y: auto;
    color: var(--secondary-color);
}

input {
    margin-top: 10px;
    width: 100%;
    box-sizing: border-box;
    background: #000;
    border: solid;
    color: var(--secondary-color);
    border-color: var(--secondary-color);
    border-width: 1px 0 0 0;
    padding-top: 10px;
    outline: none;
}

textarea {
    border-width: 1px;
}

img {
    display: block;
}

